--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -9,9 +9,9 @@
     <p>Check out <a href="http://www.epicodus.com/">Epicodus</a>. It's a great school for learning web programming!</p>
     <p>This is my <strong>first web page</strong>!</p>
     <img src="img/coffee.jpg" alt="Cute coffee design.">
-    <p>Isn't it nice?</p>
+    <p><em>Isn't it nice?</em></p>
     <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
-    <p>Here are some things I'm going to learn about coding:</p>
+    <p>Here are some things I'm going to learn about <strong>coding</strong>:</p>
     <ul>
       <li>HTML</li>
       <li>CSS</li>
