add images and links to sites

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -45,7 +45,23 @@
         </a>
       </li>
     </ul>
-
+    <p>Here are some of my favorite <em>things</em>!</p>
+    <ul>
+      <li>My cat <strong>Ludo</strong>
+          <img src="img/ludo.jpg" alt="A photo of Ludo.">
+      </li>
+      <li><strong>Traveling</strong>
+          <img src="img/hawaii.jpg" alt="A photo of Hawaii.">
+      </li>
+    </ul>
+    <p>Here are some of my favorite <em>sites</em>!</p>
+    <ul>
+      <li><a href="http://www.justjared.com/"><strong>Justjared.com</strong>
+      </a>
+      </li><a href="https://www.buzzfeed.com/"><strong>Buzzfeed.com</strong>
+        </a>
+      </li>
+    </ul>
     <p>Thanks for reading about me!</p>
   </body>
 </html>
