--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/styles1.css" rel="stylesheet" type="text/css">
+    <link href="css/newstyles.css" rel="stylesheet" type="text/css">
     <title>Web Page #1</title>
   </head>
   <body<>
