add link to new styles sheet

--- a/favorite-places.html
+++ b/favorite-places.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/newstyles.css" rel="stylesheet" type="text/css">
     <title>My favorite places</title>
   </head>
   <body>
